# bthome-ble

./: .all-contributorsrc  .flake8  .pre-commit-config.yaml  =  =2.13.0  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  hacktoberfest.yml  labels.yml
docs/source/: conf.py  index.md  installation.md  usage.md
src/bthome_ble/: __init__.py  bthome_encryption.py  bthome_v1_encryption.py  bthome_v2_encryption.py  const.py  devices.py  event.py  parser.py
templates/: CHANGELOG.md.j2
tests/: test_encryption.py  test_parser.py  test_parser_v1.py  test_parser_v2.py  test_v1_encryption.py  test_v2_encryption.py
